--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"astro": "^2.0.14"
+		"astro": "^2.0.14",
+		"netlify-identity-widget": "^1.9.2"
 	}
 }
