--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"astro": "astro"
 	},
 	"dependencies": {
+		"@astrojs/mdx": "^0.17.0",
+		"@astrojs/sitemap": "^1.0.1",
 		"astro": "^2.0.14",
 		"netlify-identity-widget": "^1.9.2"
 	},
