--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 	"dependencies": {
 		"@astrojs/mdx": "^0.17.0",
 		"@astrojs/sitemap": "^1.0.1",
-		"astro": "^2.0.14",
+		"astro": "^2.0.13",
+		"astro-netlify-cms": "^0.0.1",
 		"netlify-identity-widget": "^1.9.2"
 	},
 	"devDependencies": {
