--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,7 @@
 {
-  "extends": "astro/tsconfigs/strict.json"
+  "include": ["astro.config.mjs"],
+  "extends": "astro/tsconfigs/strict.json",
+  "compilerOptions": {
+    "module": "ES2020"
+  }
 }
